--- a/P007042.opf/layers/v001/Pagination.yml
+++ b/P007042.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 4ac80e9378d348cebf798276c40eafa4
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   2601a74159e64e078414418cb611b9a6:
