--- a/P007042.opf/layers/v002/Pagination.yml
+++ b/P007042.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: f1a8f5224e4d43759542b6333fa3dcd5
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   213e25bdb39843039dc9d418db49afc5:
