--- a/P007042.opf/meta.yml
+++ b/P007042.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P007042
 initial_creation_type: ocr
+created_at: 30/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W8LS16854
   title: ཚད་མ་རྣམ་འགྲེལ་གྱི་ཚད་མ་གྲུབ་པའི་ལེའུའི་མཐའ་དཔྱོད།
@@ -17,10 +19,3 @@ source_metadata:
       volume_number: 2
       total_pages: 716
       base_file: v002.txt
-ebook_metadata:
-  title: ཚད་མ་རྣམ་འགྲེལ་གྱི་ཚད་མ་གྲུབ་པའི་ལེའུའི་མཐའ་དཔྱོད།
-  author: ''
-  sku: P007042
-  cover: cover.jpg
-  layers:
-  - pagination
