--- a/P007042.opf/meta.yml
+++ b/P007042.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P007042
 initial_creation_type: ocr
 created_at: 30/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-17 12:38:01.684186
 source_metadata:
   id: bdr:W8LS16854
   title: ཚད་མ་རྣམ་འགྲེལ་གྱི་ཚད་མ་གྲུབ་པའི་ལེའུའི་མཐའ་དཔྱོད།
@@ -19,3 +19,5 @@ source_metadata:
       volume_number: 2
       total_pages: 716
       base_file: v002.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
